--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   cupertino_icons: ^1.0.2
+  bloc_pattern:
 
 dev_dependencies:
   flutter_test:
