--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   progress_dialog:
   firebase_core: "^0.7.0"
   cloud_firestore: "^0.16.0+1"
+  rxdart:
 
 dev_dependencies:
   flutter_test:
